# rust-backend

./: Cargo.toml  config.example.yaml
src/: main.rs
src/configs/: db.rs
src/controllers/: user_controller.rs
src/errors/: app_error.rs
src/middlewares/: api_middleware.rs  mod.rs
src/models/: config_model.rs  database_config_model.rs  mod.rs  user_model.rs
src/routes/: fallback.rs  guest_route.rs  login_route.rs  mod.rs  user_route.rs
src/tests/: mod.rs  user_testing.rs
src/utils/: utils.rs
